ceu talk in preparation

--- a/intention motor representation joint action (paper 3)/conf budapest philosophy 2012-11/motor representation and shared intention HANDOUT.tex
+++ b/intention motor representation joint action (paper 3)/conf budapest philosophy 2012-11/motor representation and shared intention HANDOUT.tex
@@ -47,10 +47,8 @@
 }
 
 
-Stephen A. Butterfill \& Corrado Sinigaglia
-
 %<s.butterfill@warwick.ac.uk>
-<butterfillS@ceu.hu>
+butterfillS@ceu.hu / s.butterfill@warwick.ac.uk
 
 \end{center}
 %
