--- a/intention motor representation joint action (paper 3)/conf budapest philosophy 2012-11/shared agency and motor representation.tex
+++ b/intention motor representation joint action (paper 3)/conf budapest philosophy 2012-11/shared agency and motor representation.tex
@@ -38,55 +38,58 @@ Shared agency is not only a matter of what we intend: sometimes it  constitutive
 
 \end{abstract}
 
-
-
-\section{***Discussion with Cordula Vesper}
-\begin{enumerate}
-\item Say more about what shared agency at the start: use the contrast cases instead of examples, and say that it involves some kind of fusing of agency.
-\item Note that in the jumping experiments, only the subject with the shorter jump changes what she does depending on the difference in jump-length between the two subjects.  Vesper et al interpret this as showing that the subject with the shorter jump plans the whole activity.  But it isn't obviously reciprocal: there is no evidence that the subject with the longer jump is similarly planning.  And this makes sense: here they achieve coordination by first distributing roles (a strategy) and then having at least one subject plan both actions (so there is slightly less reliance on the two plans coinciding).  
-Of course the appearance that they are distributing roles might just be an artefact of reciprocal planning where the upshot of the planning is that the person with the longer jump just does what she would normally do.
-
-\item {[done]}  Don't say `neither shared nor an intention' unless you explain this.
-\item {[done]} Can cite \citet{konvalinka:2010_follow} as example of what happens when two people each try to predict the other.
-\end{enumerate}
-
-
-
-\section{***Discussion with Hong Yu}
-`Once we move beyond the single agent there's no a priori reason to suppose that you have a single kind of agentive structure' (Hong Yu).
-This is slightly tricky for me because I don't think there's a single kind of agentive structure in individual action either.
-
-Dissimilarity between this paper and the paper on intention and motor representation: whereas it was maybe plausible to conjecture that all intentions bottom out in motor representation, it is not similarly plausible to claim that shared intentions bottom out in social motor representations (there are surely cases of shared agency where the sharing is entirely a matter of intention and does not involve motor representations at all).
-
-Hong Yu suggested that we need to include the argument about format in order to argue that motor representations have a role distinct from that of shared intention.
-
-In discussion: I need to shift this paper from saying:
-\begin{quote}
-There is a form of shared agency and that form cannot be characterised without reference to motor representation.
-\end{quote}
-to saying:
-\begin{quote}
-There are at least two forms of shared agency (at least two agentive structures) and some of these are such that characterising them involves appeal to motor representation.
-\end{quote}
-This shift reveals a new problem: we become more open to the objection that philosophy should concern forms of shared agency involving intention only.
-
-I need to stress the \emph{parity argument}.
-The argument is this:
-If 
-\begin{quote}
-
-	two or more agents' actions being appropriately related to a shared intention (as Bratman characterises it) is sufficient for shared agency, 
-\end{quote}
-then
-\begin{quote}
-	two or more agents' actions being appropriately related to a structure of social motor representation is also sufficient for shared 
-	agency.
-\end{quote}
+%
+%
+%\section{***Discussion with Cordula Vesper}
+%\begin{enumerate}
+%\item Say more about what shared agency at the start: use the contrast cases instead of examples, and say that it involves some kind of fusing of agency.
+%\item Note that in the jumping experiments, only the subject with the shorter jump changes what she does depending on the difference in jump-length between the two subjects.  Vesper et al interpret this as showing that the subject with the shorter jump plans the whole activity.  But it isn't obviously reciprocal: there is no evidence that the subject with the longer jump is similarly planning.  And this makes sense: here they achieve coordination by first distributing roles (a strategy) and then having at least one subject plan both actions (so there is slightly less reliance on the two plans coinciding).  
+%Of course the appearance that they are distributing roles might just be an artefact of reciprocal planning where the upshot of the planning is that the person with the longer jump just does what she would normally do.
+%
+%\item {[done]}  Don't say `neither shared nor an intention' unless you explain this.
+%\item {[done]} Can cite \citet{konvalinka:2010_follow} as example of what happens when two people each try to predict the other.
+%\end{enumerate}
+%
+%
+%
+%\section{***Discussion with Hong Yu}
+%`Once we move beyond the single agent there's no a priori reason to suppose that you have a single kind of agentive structure' (Hong Yu).
+%This is slightly tricky for me because I don't think there's a single kind of agentive structure in individual action either.
+%
+%Dissimilarity between this paper and the paper on intention and motor representation: whereas it was maybe plausible to conjecture that all intentions bottom out in motor representation, it is not similarly plausible to claim that shared intentions bottom out in social motor representations (there are surely cases of shared agency where the sharing is entirely a matter of intention and does not involve motor representations at all).
+%
+%Hong Yu suggested that we need to include the argument about format in order to argue that motor representations have a role distinct from that of shared intention.
+%
+%In discussion: I need to shift this paper from saying:
+%\begin{quote}
+%There is a form of shared agency and that form cannot be characterised without reference to motor representation.
+%\end{quote}
+%to saying:
+%\begin{quote}
+%There are at least two forms of shared agency (at least two agentive structures) and some of these are such that characterising them involves appeal to motor representation.
+%\end{quote}
+%This shift reveals a new problem: we become more open to the objection that philosophy should concern forms of shared agency involving intention only.
+%
+%I need to stress the \emph{parity argument}.
+%The argument is this:
+%If 
+%\begin{quote}
+%
+%	two or more agents' actions being appropriately related to a shared intention (as Bratman characterises it) is sufficient for shared agency, 
+%\end{quote}
+%then
+%\begin{quote}
+%	two or more agents' actions being appropriately related to a structure of social motor representation is also sufficient for shared 
+%	agency.
+%\end{quote}
 
 
 
 
 \section{Introduction}
+Shared agency is a familiar feature of everyday life, but it's hard to get a good fix on it without assuming a big chunk of theory.
+I think the best available way to zoom in on shared agency is to think about contrast cases, that is pairs of cases which are as similar as possible except one involves shared agency and the other involves parallel but merely individual agency.
+
 When members of a flash mob in the Central Cafe respond to a pre-arranged cue by noisily opening their newspapers, they exercise shared agency. 
 But when someone not part of the mob just happens to noisily open her newspaper in response to the same cue, her action does not involve shared agency.%
 \footnote{
@@ -98,11 +101,26 @@ To give another example,
    later walk to the metro station together. 
 But two people who merely happened to be walking to the metro station side by side would not be exercising shared agency \citep{gilbert_walking_1990}. 
 These sorts of case invite the question, 
-How do actions involving shared agency differ from merely parallel actions involving  only individual agency? 
+How do activities involving shared agency differ from activities involving parallel agency only? 
+
+We should be motivated to answer this question because 
+shared agency raises a tangle of scientific and philosophical questions.  Psychologically we want to know which mechanisms make it possible \citep{Sebanz:2006yq,vesper_minimal_2010}.  
+Developmentally we want to know when shared agency emerges, what it presupposes and whether it might somehow facilitate socio-cognitive, pragmatic or symbolic development \citep{Moll:2007gu,Hughes:2004zj,Brownell:2006gu}.  
+Phenomenologically we want to characterise what (if anything) is special about experiences of action and agency when shared agency is involved \citep{Pacherie:2010fk}.  
+Metaphysically we want to know what kinds of entities and structures are implied by the existence of shared agency \citep{Gilbert:1992rs,Searle:1994lb}.  
+And normatively we want to know what kinds of commitments (if any) are entailed by shared agency and how these commitments arise \citep{Roth:2004ki}.
+%, plus a formal account of how practical reasoning for joint action differs (if at all) from individual practical reasoning \citep{Sugden:2000mw,Gold:2007zd}
+A philosophical account of shared agency 
+that made it possible to systematically distinguish shared from individual agency  
+may support investigation of these questions (as \citealp{Bratman:2009lv} suggests).  
+%Or, if there is more than one form of shared agency, the account should provide a principled way of distinguishing among forms of individual and shared agency.  
+
+So, to return to the contrast cases,
+how do activities involving shared agency differ from activities involving parallel agency only? 
 
 The first example shows that the difference between shared agency and parallel individual agency can’t just be that the resulting actions have a common effect because merely parallel actions can have common effects too. 
 And the second example shows that the difference can’t just be a matter of coordination, because people who are merely happen to be walking side by side each other also need to coordinate their actions in order to avoid colliding.  
-Apparently, then, systematically distinguishing cases of shared agency from cases of parallel but merely individual agency  requires reflection on causes of actions.
+Apparently, then, systematically distinguishing cases of shared agency from cases of parallel but merely individual agency  requires reflection on agents' mental states.
 
 
 %
@@ -117,9 +135,14 @@ Apparently, then, systematically distinguishing cases of shared agency from case
 %	cooperatively pulling handles in sequence to make a dog-puppet sing \citep{Brownell:2006gu},
 %	bouncing a ball on a large trampoline together \citep{Tomasello:2007gl}.
 
-Which representations %and processes 
-are needed to distinguish shared from individual agency?
-Philosophers have so far considered intentions and commitments but ignored the possibility that appeal to motor representations may also be needed. 
+Which mental states might distinguish shared from individual agency?
+
+ 
+
+
+
+
+***Philosophers have so far considered intentions and commitments but ignored the possibility that appeal to motor representations may also be needed. 
 %To considerations jointly motivate considering whether fully characterising shared agency may require appeal to motor representation.
 By contrast, concerning individual rather than shared agency, some have argued that motor representation may play a role in explaining agency \citep[e.g.][]{pacherie:2000_content,pacherie:2008_action,butterfill:2012_intention}. 
 In addition, scientific research provides evidence that motor representations sometimes play a role in enabling agents to exercise shared agency, as we shall explain in detail below.
