--- a/intention motor representation goal ascription with corrado sinigaglia (paper 2)/Motor Representation in Goal Ascription.tex
+++ b/intention motor representation goal ascription with corrado sinigaglia (paper 2)/Motor Representation in Goal Ascription.tex
@@ -46,6 +46,7 @@
 
 
 
+
 \begin{abstract}
 \noindent
 %
@@ -239,12 +240,51 @@ E.g. clapping:
 
 
 
+\section{***NEW PLAN***}
+\begin{enumerate}
+\item There is experience revelatory of action
+	\begin{enumerate}
+	\item there is a phenomenal element which is common to : (i) performing, (ii) imagining and (iii) observing action
+	\item this common phenomenal element enables us to know (i) which action we are performing, (ii) which action we are imagining, and (iii) which action we are observing.  It is an experience revelatory of action.
+	\item the common phenomenal element depends on motor representation of an outcome to which the action is directed.  (This what links the motor representation to the experience).
+	\end{enumerate}
+
+\item What is this experience revelatory of action, and how does it explain the existence of content-respecting influences of motor representation on judgements about the goals of actions?
+	\begin{enumerate}
+	\item Indirect hypothesis: the experience revelatory of action is an experience of the movements involve in acting, or of sensory consequence of action
+
+	\item Direct hypothesis: the experience revelatory of action is an experience of goal-directed action as such
+	\end{enumerate}
+
+
+\end{enumerate}
 
 
 \section{Experience of Action}
 \label{sec:processes}
-Our aim in this and the following sections is to explore how motor representations could sometimes have content-respecting influences on judgements about the goals of observed actions. Broadly, our proposal is that the influence of motor representation on observational judgements goes via experience.  It is because motor representations can affect our experiences when we observe actions that those motor representations can facilitate judgements about the actions. However this broad idea is consistent with two quite different hypotheses concerning the experiences associated with motor representation in action observation. 
+Our aim in this and the following sections is to explore how motor representations could sometimes have content-respecting influences on judgements about the goals of observed actions. Broadly, our proposal is that the influence of motor representation on observational judgements goes via experience.  It is because motor representations can affect our experiences when we observe actions that those motor representations can facilitate judgements about the actions. 
 
+Our argument will involve three steps. The first step is to argue that in performing, imagining and observing actions alike there are \emph{experiences revelatory of action}, that is, experiences which provide the subject of experience with reasons for correct judgements about which action someone is performing.  (Note that we initially leave open the question of what experiences revelatory of action are experiences of.)  The second step is to show that these experiences depend on motor representations.  And the third step is to consider what experiences revelatory of action could be experiences of, which is necessary in order to describe how all of this can be used to explain the existence of content-respecting influences of motor representation on judgements about the goals of actions.
+
+When acting it is often possible to know which action you are performing---to know, for example, whether you are grasping a particular mug or stroking the cat (or perhaps both). How could you know this?  In some cases it might depend on knowing your intentions. However, there are cases in which people act on an intention but do something not compatible with fulfilling the intention (*ref). Suppose you are facing a mug and holding a wine glass for a friend and intend to grasp the mug but, perhaps due to being distracted or a manipulation of your attention, start to drink from the wine glass.  In such a case it is possible that you will realise what you are doing, stop it and attempt once more to grasp the mug. So you know what you are doing even though, in this sort of case, such knowledge does not plausibly depend on knowing what you intend.  A natural thought, then, is that in performing an action such as grasping, it is sometimes possible to know what you are doing on the basis of experience. That is to say, in acting there are (at least sometimes) experiences revelatory of action. This much should be almost uncontroversial.
+
+Against this conclusion, someone may insist that knowledge of what you are doing depends on knowledge of your intentions even when distracted.  On this view, someone who intends to do one thing but absent mindedly starts to drink from a wine glass she is holding for a friend really intends to drink and knows that she intends this. But now consider the special case of a subject with anarchic hand syndrome who attempts to picks up a cup of tea with one hand while using the other hand to put the tea back onto the table.%
+\footnote{
+\citet[p.\ 1114]{della_sala:1991_anarchic}. Subjects with anarchic hand syndrome, which usually follows lesions of the anterior part of the corpus callosum and of the supplementary motor area, perform actions incompatible with their avowed intentions. These patients may also refer the their anarchic hand as having a mind of its own. he anarchic hand syndrome \citep{della_sala:1994fk}.
+} 
+%
+This subject knows which actions she is performing with which hands: this knowledge is guiding her actions insofar as she uses one hand to control the other.  But it seems unlikely that this knowledge depends on knowing what she intends.  For she does not intend one of the actions she is performing, as she herself claims.  Or else, contrary to her own reports, she knowingly has an irrational combination of intentions; but such combinations of intentions do reliably generate detailed predictions about actions and so knowledge of these intentions could not explain the subject's knowledge of her own actions.  Either way, then, experience is needed to explain the possibility of knowing which actions one is performing.  This strengthens the conclusion that, at least sometimes, performing actions involves experiences revelatory of actions.  
+
+
+
+
+
+
+
+
+\section{Experience of Action [*OLD]}
+\label{sec:processes}
+Our aim in this and the following sections is to explore how motor representations could sometimes have content-respecting influences on judgements about the goals of observed actions. Broadly, our proposal is that the influence of motor representation on observational judgements goes via experience.  It is because motor representations can affect our experiences when we observe actions that those motor representations can facilitate judgements about the actions. However this broad idea is consistent with two quite different hypotheses concerning the experiences associated with motor representation in action observation. 
 
 One hypothesis, call it the Indirect Hypothesis, is based on evidence that, in observing action, motor representation can influence visual and acoustic experiences (see figure \vref{fig_indirect_hypothesis}). (Perhaps this holds for other modalities too.) The relevant experiences are perceptual experiences of bodily configurations and movements as an action unfolds, and perceptual experiences of characteristic sensory effects of actions.  Such experiences sometimes enable an observer to make judgements about the goals of actions, for she may associate particular patterns of bodily movement or particular sensory effects with particular goals.  But in many cases of action observation, the agent's bodily movements and the sensory effects of her actions may be partially obscured or surrounded by irrelevant distractors, or otherwise difficult to identify.  But suppose that, as some evidence suggests, motor representation can influence---and even enhance---such experiences of bodily configurations and movements, and of sensory effects.  Then motor representations might thereby facilitate judgements about the goals of actions.  So on the Indirect Hypothesis, motor representations sometimes enhance perceptual experiences of movements or sensory effects which in turn sometimes facilitate judgements about the goals of actions.   
 
@@ -311,18 +351,33 @@ Pitch: MR influence Perc [no action observation]
 
 
 
-\subsection{The Direct Hypothesis: Experiences of Action}
+\section{The Direct Hypothesis: Experiences of Action}
 Our aim is to understand how motor representations of outcomes can have a content-respecting influence on judgements about the goals of actions. 
-According to the Direct Hypothesis, a motor representation of an outcome can underpin an experience of an action as directed to a matching outcome, and this experience can in turn ground a judgement about the action's being directed to a matching outcome.  This hypothesis hinges on two potentially controversial claims.  The first is that in observing action we experience not only movements, sounds and other sensory effects of actions but also the goal-directed actions as such. And the second is that such experiences are underpinned by motor representations of corresponding outcomes.  
+According to the Direct Hypothesis, a motor representation of an outcome can underpin an experience of an action as directed to a matching outcome, and this experience can in turn ground a judgement about the goal of the action.  This hypothesis hinges on two potentially controversial claims.  The first is that in observing action we experience not only movements, sounds and other sensory effects of actions but also the goal-directed actions as such. And the second is that such experiences are underpinned by motor representations of corresponding outcomes.  
 
-Is the first claim plausible?  Consider the following argument:
+Is the first claim plausible?  Compare actually grasping a mug with merely imagining grasping it.  There is a way of imagining grasping the mug which resembles actually grasping it with respect to timing \citep{decety:1989_timing, decety:1996_imagined, Jeannerod:1994oz} and the sorts of factors that make acting more or less awkward \citep{parsons:1994_temporal, frak:2001_orientation}. Further, imagining grasping the mug in advance would bring some of the benefits of actually rehearsing grasping it (*ref). The experience involved in imagining grasping the mug in this way has something in common with the experience involved in actually grasping it.  But what is common to the two experiences?  
+
+****
+
+Is the first claim plausible?  First note that there is a phenomenologically action-like way of imagining, one which involves something almost like acting except that such imaginings are not necessarily responsive to the features of actual objects and do not necessarily result in bodily movements.  Suppose that you are about to perform a delicate operation with some scissors. You stand poised to act, but first pause to mentally pantomime performing the action. In some respects the experiences involved in this imaginative exercise may be barely distinguishable from experiences that might be involved in actually performing the operation (\citealp[p.\ 161]{currie:1997_mental}; \citealp[p.\ 727]{jeannerod:1995_mental}; \citealp[p.\ 638-9]{kosslyn:2001_neural}).  In fact, imagining performing the operation in advance has some of the benefits of actually rehearsing it (*ref).  For imagining performing an action in this phenomenologically action-like way sometimes resembles actually performing the action with respect to timing \citep{decety:1989_timing, decety:1996_imagined, Jeannerod:1994oz} and the sorts of factors that make acting more or less awkward \citep{parsons:1994_temporal, frak:2001_orientation}.  
+
+
+
+Given that an experience of actually performing an action can have elements in common with the experience involved in merely imagining performing that action, what could these common elements be ?
+
+Consider the following argument:
 %
 \begin{enumerate}
 \item
-There is a way of imagining acting which involves experiencing goal-directed actions as such.
+In actually performing a goal-directed action it is sometimes possible experience the action as a goal-directed action.
 
 \item
-There are sometimes elements common to what you experience when you imagine performing a goal-directed action and what you experience when you observe someone else performing that action; in particular, the experience of action is common to both.
+There is a way of imagining acting which involves something almost like acting, except that such imaginings are not necessarily responsive to the features of actual objects and do not necessarily result in bodily movements.
+
+Therefore: sometimes, when you imagine performing an action you may experience a goal-directed action as such.
+
+\item
+What you experience when you imagine performing an action has elements in common with what you experience when you observe someone else performing that action; in particular, the experience of goal-directed action is common to both.
 \end{enumerate}
 Therefore:
 \begin{enumerate}[resume]
@@ -332,12 +387,14 @@ Sometimes observing a goal-directed action involves experiencing it as such.
 %
 Without attempting to show that the premises are true, we shall offer some considerations which indicate that they are at least defensible. 
 
-On the first premise, (1), let us start by observing that there are two ways of imagining acting.  One, cognitive way of imagining involves something like thinking about performing an action.  Another, phenomenologically action-like way of imagining involves something almost like acting except that such imaginings are not necessarily responsive to the features of actual objects and do not necessarily result in bodily movements.  Suppose that you are about to perform a delicate operation with some scissors. You stand poised to act, but first pause to mentally pantomime performing the action. In some respects the experiences involved in this imaginative exercise may be barely distinguishable from experiences that might be involved in actually performing the operation (\citealp[p.\ 161]{currie:1997_mental}; \citealp[p.\ 727]{jeannerod:1995_mental}; \citealp[p.\ 638-9]{kosslyn:2001_neural}).  In fact, imagining performing the operation in advance has some of the benefits of actually rehearsing it.  For imagining performing an action in this phenomenologically action-like way sometimes resembles actually performing the action with respect to timing \citep{decety:1989_timing, decety:1996_imagined, Jeannerod:1994oz} and the sorts of factors that make acting more or less awkward \citep{parsons:1994_temporal, frak:2001_orientation}.  The first premise, (1), concerns this phenomenologically action-like way of imagining.  
+On the first premise, (1), we first need to distinguish two ways of imagining acting.  One, cognitive way of imagining involves something like thinking about performing an action.  Another, phenomenologically action-like way of imagining involves something almost like acting except that such imaginings are not necessarily responsive to the features of actual objects and do not necessarily result in bodily movements.  Suppose that you are about to perform a delicate operation with some scissors. You stand poised to act, but first pause to mentally pantomime performing the action. In some respects the experiences involved in this imaginative exercise may be barely distinguishable from experiences that might be involved in actually performing the operation (\citealp[p.\ 161]{currie:1997_mental}; \citealp[p.\ 727]{jeannerod:1995_mental}; \citealp[p.\ 638-9]{kosslyn:2001_neural}).  In fact, imagining performing the operation in advance has some of the benefits of actually rehearsing it.  For imagining performing an action in this phenomenologically action-like way sometimes resembles actually performing the action with respect to timing \citep{decety:1989_timing, decety:1996_imagined, Jeannerod:1994oz} and the sorts of factors that make acting more or less awkward \citep{parsons:1994_temporal, frak:2001_orientation}.  The first premise, (1), concerns this phenomenologically action-like way of imagining.  
 
-What do we experience when we imagine acting?  ***HERE
+Step 1: phenomenologically action-like imagination involves motor representation.  We know this because how actions unfold in this way of imagining reflects motor constraints linked to the goal of the action (so not only constraints arising from, for example, finger configuration) and timings.  For instance ...
+
+Step 2: What do we experience when we imagine acting?  ***HERE
 a.  There are no movements or sensory effects to experience (but there is  no action produced either).
 b.  There is motor representation of action (but there may also be visual representation of sensory effects of the action not performed).
-c.  I could be mistaken about the movements involved in an action and about its sensory effects but still know that I am imagining it (and not just because I intend to imagine it and then do some imaginative thing or other---if my mind wanders so that I start imaginig a different action, I could know this).
+c.  I could be mistaken about the movements involved in an action and about its sensory effects but still know that I am imagining it (and not just because I intend to imagine it and then do some imaginative thing or other---if my mind wanders so that I start imagining a different action, I could know this).
 (one relevant consideration is that you know not only which action you are imagining but when you have succeeded in imagining performing it); ()
 (corollary: there can be experiences of action without experiences of acting)
 
@@ -356,7 +413,7 @@ On the leading, best supported explanation, anosognosia for hemiplegia arises fr
 
 How is anosognosia for hemiplegia relevant to the issue of whether there are experiences of action as such?  It seems that anosognosic subjects have some experiences which are revelatory of action---revelatory in the sense that they provide reasons for judgements about actions---despite not actually moving a limb.  What could these experiences be experiences of?  Consider the claim that these are experiences of movement only.  While it is arguably not generally correct to infer an absence of experience of movement from the absence of actual movement, in this particular case it does seems unlikely that there could be experience of movement.  After all, some anosognosic subjects have intact perceptual systems: if they experience movement at all, they should experience an absence of movement.  So any experiences of movement will not be the sort of experiences that would provide reasons for judgements about successful action.  Given that (as argued above) the experiences on which anosognosic subjects' judgements of action are based are also not entirely a product of confabulation, it is plausible to accept that they are experiences of action as such.
 
-This view is further supported by research on deafferented subjects.  These subjects lack tactile and proprioceptive sensory feedback from their actions but, unlike subjects with anosognosia for hemiplegia, can actually move their limbs.  Such subjects may continue to have some experiences characteristic of action; for instance, when asked to flex an index finger they can report having done so even in the absence of visual information \citep{kristeva:2006}.  These subjects' sensory deficits make it unlikely that their experiences could be of movements or the like: it is more plausible that, concerning acting, their experiences are like those of subjects with anosognosia for hemiplegia.  None experience movement: what they experience is action.
+This view is further supported by research on deafferented subjects.  These subjects lack tactile and proprioceptive sensory feedback from their actions but, unlike subjects with anosognosia for hemiplegia, can actually move their limbs.  Such subjects may continue to have some experiences characteristic of action; for instance, when asked to flex an index finger they can report having done so even in the absence of visual information \citep{kristeva:2006}.  These subjects' sensory deficits make it unlikely that their experiences could be of movements or the like (*no: motor-perception associations; but what do they report?): it is more plausible that, concerning acting, their experiences are like those of subjects with anosognosia for hemiplegia.  None experience movement: what they experience is action.
 
 Anosognosia and deafference comprise a useful pair of cases: some anosognosics we have preserved perceptual senses and an absence of actual bodily movement, whereas individuals suffering deafference have damaged senses and actual bodily movement.  But in both cases there are experiences revelatory of action.  The existence of these disorders indicates that motor representation is sufficient for experiences capable of grounding judgements about actions even in the absence of any perceptual experiences of movements, sounds or the like.  It is plausible to infer that these experiences are experiences of action as such.
 
@@ -428,6 +485,5 @@ MR<----> Action Judgment (action concept) <----> B \& D Judgment (b\&d concept)
 
 
 \end{document}
-
 
 
